basic report tool functionality

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,10 +4,13 @@
     <title>RailsVuePetProject</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <script type="text/javascript" src="//cdn.webix.com/edge/webix.js"></script>
+    <link rel="stylesheet" type="text/css" href="//cdn.webix.com/edge/webix.css">
 
     <%= stylesheet_link_tag 'application' %>
     <%= javascript_pack_tag 'hello_vue' %>
     <%= stylesheet_pack_tag 'hello_vue' %>
+
   </head>
 
   <body>
